--- a/index.html
+++ b/index.html
@@ -9,23 +9,23 @@
 </head>
 <body>
     <div id="container">
-        <div id="display">1122</div>
+        <div id="display">0</div>
         <button id="clear">AC</button>
-        <button id="divide">/</button>
-        <button id="seven">7</button>
-        <button id="eight">8</button>
-        <button id="nine">9</button>
-        <button id="multiply">*</button>
-        <button id="four">4</button>
-        <button id="five">5</button>
-        <button id="six">6</button>
-        <button id="subtract">-</button>
-        <button id="one">1</button>
-        <button id="two">2</button>
-        <button id="three">3</button>
-        <button id="add">+</button>
-        <button id="zero">0</button>   
-        <button id="equals">=</button>     
+        <button class="operator" value="/">/</button>
+        <button class="operand" value="7">7</button>
+        <button class="operand" value="8">8</button>
+        <button class="operand" value="9">9</button>
+        <button class="operator" value="*">*</button>
+        <button class="operand" value="4">4</button>
+        <button class="operand" value="5">5</button>
+        <button class="operand" value="6">6</button>
+        <button class="operator" value="-">-</button>
+        <button class="operand" value="1">1</button>
+        <button class="operand" value="2">2</button>
+        <button class="operand" value="3">3</button>
+        <button class="operator" value="+">+</button>
+        <button class="operand" value="0">0</button>   
+        <button class="operator" value="=">=</button>     
     </div>
     
 </body>
